[package]
name = "quadB"
version = "0.1.0"
edition = "2021"

[dependencies]


[[bin]]
name = "palindrome"
path = "src/bin/palindrome.rs"

[[bin]]
name = "binsearch"
path = "src/bin/binary_search.rs"

[[bin]]
name = "shortestword"
path = "src/bin/shortest_word.rs"

[[bin]]
name = "prime"
path = "src/bin/prime.rs"

[[bin]]
name = "median"
path = "src/bin/median.rs"

[[bin]]
name = "prefix"
path = "src/bin/prefix.rs"

[[bin]]
name = "kth"
path = "src/bin/kth.rs"

[[bin]]
name = "reverse"
path = "src/bin/reverse.rs"

[[bin]]
name = "merge"
path = "src/bin/merge.rs"

[[bin]]
name = "maxsubarray"
path = "src/bin/max_subarray.rs"

[[bin]]
name = "depth"
path = "src/bin/depth.rs"